# uv-monorepo

./: README.md  pyproject.toml
apps/api/: pyproject.toml
apps/api/myorg/api/: __init__.py
apps/cli/: pyproject.toml
apps/cli/myorg/cli/: __init__.py
libs/core/: pyproject.toml
libs/utils/: pyproject.toml
libs/utils/myorg/utils/: __init__.py
